--- a/admin/settings-admin.html
+++ b/admin/settings-admin.html
@@ -1,56 +1,117 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-  <meta charset="UTF-8">
-  <title>الإعدادات | لوحة التحكم</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/header.css">
-  <link rel="stylesheet" href="/css/footer.css">
-  <link rel="stylesheet" href="css-admin/admin.css">
-</head>
-<body>
-
-<div id="header-placeholder"></div>
-
-<main class="admin-wrapper">
-  <div class="admin-layout">
-    <aside class="admin-sidebar"><div id="sidebar-placeholder"></div></aside>
-    <section class="admin-main">
-      <div id="topbar-placeholder"></div>
-      <div class="admin-content">
-        <h1>إعدادات الأدمن</h1>
-        <form id="admin-settings-form">
-          <label for="site-name">اسم الموقع:</label>
-          <input type="text" id="site-name" name="site-name" placeholder="CourseHub" required>
-
-          <label for="default-language">اللغة الافتراضية:</label>
-          <select id="default-language" name="default-language">
-            <option value="ar">العربية</option>
-            <option value="en">الإنجليزية</option>
-          </select>
-
-          <label for="notification-email">البريد الإلكتروني للتنبيهات:</label>
-          <input type="email" id="notification-email" name="notification-email" placeholder="admin@example.com" required>
-
-          <button type="submit">حفظ الإعدادات</button>
-        </form>
-      </div>
-    </section>
-  </div>
-</main>
-
-<div id="footer-placeholder"></div>
-
-<script type="module" src="/js/main.js"></script>
-<script type="module" src="/js/header.js"></script>
-<script type="module" src="/js/footer.js"></script>
-
-<script type="module" src="js-admin/admin-guard.js"></script>
-<script type="module" src="js-admin/admin-layout.js"></script>
-<script type="module" src="js-admin/settings-admin.js"></script>
-
-</body>
-</html>
-
+diff --git a/admin/settings-admin.html b/admin/settings-admin.html
+index 374fe7084d84c2cb609afd477194a299b0daeeff..d4a76cb055a9b2f8322e3818630eb3d618da5eb7 100644
+--- a/admin/settings-admin.html
++++ b/admin/settings-admin.html
+@@ -1,56 +1,56 @@
+-<!DOCTYPE html>
+-<html lang="ar" dir="rtl">
+-<head>
+-  <meta charset="UTF-8">
+-  <title>الإعدادات | لوحة التحكم</title>
+-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+-
+-  <link rel="stylesheet" href="/css/style.css">
+-  <link rel="stylesheet" href="/css/header.css">
+-  <link rel="stylesheet" href="/css/footer.css">
+-  <link rel="stylesheet" href="css-admin/admin.css">
+-</head>
+-<body>
+-
+-<div id="header-placeholder"></div>
+-
+-<main class="admin-wrapper">
+-  <div class="admin-layout">
+-    <aside class="admin-sidebar"><div id="sidebar-placeholder"></div></aside>
+-    <section class="admin-main">
+-      <div id="topbar-placeholder"></div>
+-      <div class="admin-content">
+-        <h1>إعدادات الأدمن</h1>
+-        <form id="admin-settings-form">
+-          <label for="site-name">اسم الموقع:</label>
+-          <input type="text" id="site-name" name="site-name" placeholder="CourseHub" required>
+-
+-          <label for="default-language">اللغة الافتراضية:</label>
+-          <select id="default-language" name="default-language">
+-            <option value="ar">العربية</option>
+-            <option value="en">الإنجليزية</option>
+-          </select>
+-
+-          <label for="notification-email">البريد الإلكتروني للتنبيهات:</label>
+-          <input type="email" id="notification-email" name="notification-email" placeholder="admin@example.com" required>
+-
+-          <button type="submit">حفظ الإعدادات</button>
+-        </form>
+-      </div>
+-    </section>
+-  </div>
+-</main>
+-
+-<div id="footer-placeholder"></div>
+-
+-<script type="module" src="/js/main.js"></script>
+-<script type="module" src="/js/header.js"></script>
+-<script type="module" src="/js/footer.js"></script>
+-
+-<script type="module" src="js-admin/admin-guard.js"></script>
+-<script type="module" src="js-admin/admin-layout.js"></script>
+-<script type="module" src="js-admin/settings-admin.js"></script>
+-
+-</body>
+-</html>
+-
++<!DOCTYPE html>
++<html lang="ar" dir="rtl">
++<head>
++  <meta charset="UTF-8">
++  <title>الإعدادات | لوحة التحكم</title>
++  <meta name="viewport" content="width=device-width, initial-scale=1.0">
++
++  <link rel="stylesheet" href="/css/style.css">
++  <link rel="stylesheet" href="/css/header.css">
++  <link rel="stylesheet" href="/css/footer.css">
++  <link rel="stylesheet" href="css-admin/admin.css">
++  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
++</head>
++<body>
++
++<div id="header-placeholder"></div>
++
++<main class="admin-wrapper">
++  <div class="admin-layout">
++    <aside class="admin-sidebar"><div id="sidebar-placeholder"></div></aside>
++    <section class="admin-main">
++      <div id="topbar-placeholder"></div>
++      <div class="admin-content">
++        <h1>إعدادات الأدمن</h1>
++        <form id="admin-settings-form">
++          <label for="site-name">اسم الموقع:</label>
++          <input type="text" id="site-name" name="site-name" placeholder="CourseHub" required>
++
++          <label for="default-language">اللغة الافتراضية:</label>
++          <select id="default-language" name="default-language">
++            <option value="ar">العربية</option>
++            <option value="en">الإنجليزية</option>
++          </select>
++
++          <label for="notification-email">البريد الإلكتروني للتنبيهات:</label>
++          <input type="email" id="notification-email" name="notification-email" placeholder="admin@example.com" required>
++
++          <button type="submit">حفظ الإعدادات</button>
++        </form>
++      </div>
++    </section>
++  </div>
++</main>
++
++<div id="footer-placeholder"></div>
++
++<script type="module" src="/js/main.js" defer></script>
++<script type="module" src="/js/footer.js"></script>
++
++<script type="module" src="js-admin/admin-guard.js"></script>
++<script type="module" src="js-admin/admin-layout.js"></script>
++<script type="module" src="js-admin/settings-admin.js"></script>
++
++</body>
++</html>
++
