--- a/tests.html
+++ b/tests.html
@@ -1,48 +1,60 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-
-<head>
-  <link rel="stylesheet" href="css/header.css">
-
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>الاختبارات - CourseHub</title>
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<body>
-
-<!-- Header Placeholder -->
-<div id="header-placeholder"></div>
-
-<!-- Main Section -->
-<section>
-  <h2>اختبارات الدورات</h2>
-  <div class="courses-grid">
-    <div class="card">
-      <h3>اختبار HTML & CSS</h3>
-      <p>قم بإكمال الاختبار لمعرفة مستواك.</p>
-      <a href="#" class="btn">ابدأ الاختبار</a>
-    </div>
-    <div class="card">
-      <h3>اختبار JavaScript</h3>
-      <p>قم بإكمال الاختبار لمعرفة مستواك.</p>
-      <a href="#" class="btn">ابدأ الاختبار</a>
-    </div>
-    <div class="card">
-      <h3>اختبار الذكاء الاصطناعي</h3>
-      <p>قم بإكمال الاختبار لمعرفة مستواك.</p>
-      <a href="#" class="btn">ابدأ الاختبار</a>
-    </div>
-  </div>
-</section>
-
-<!-- Footer Placeholder -->
-<div id="footer-placeholder"></div>
-
-<!-- Main JS لاستدعاء الهيدر والفوتر -->
-  <link rel="stylesheet" href="css/footer.css">
-<script src="js/main.js"></script>
-
-</body>
-</html>
+diff --git a/tests.html b/tests.html
+index ad3117f5a2fb0f75c3780f353db4eba9c1f453dc..1c53189f81b22a5ed95b106dd10800e0dc26a85d 100644
+--- a/tests.html
++++ b/tests.html
+@@ -1,48 +1,47 @@
+ <!DOCTYPE html>
+ <html lang="ar" dir="rtl">
+ 
+ <head>
++  <meta charset="UTF-8">
++  <meta name="viewport" content="width=device-width, initial-scale=1.0">
++  <title>الاختبارات - CourseHub</title>
+   <link rel="stylesheet" href="css/header.css">
+-
+-<meta charset="UTF-8">
+-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+-<title>الاختبارات - CourseHub</title>
+-<link rel="stylesheet" href="css/style.css">
+-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
++  <link rel="stylesheet" href="css/style.css">
++  <link rel="stylesheet" href="css/footer.css">
++  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+ </head>
+ <body>
+ 
+ <!-- Header Placeholder -->
+ <div id="header-placeholder"></div>
+ 
+ <!-- Main Section -->
+ <section>
+   <h2>اختبارات الدورات</h2>
+   <div class="courses-grid">
+     <div class="card">
+       <h3>اختبار HTML & CSS</h3>
+       <p>قم بإكمال الاختبار لمعرفة مستواك.</p>
+       <a href="#" class="btn">ابدأ الاختبار</a>
+     </div>
+     <div class="card">
+       <h3>اختبار JavaScript</h3>
+       <p>قم بإكمال الاختبار لمعرفة مستواك.</p>
+       <a href="#" class="btn">ابدأ الاختبار</a>
+     </div>
+     <div class="card">
+       <h3>اختبار الذكاء الاصطناعي</h3>
+       <p>قم بإكمال الاختبار لمعرفة مستواك.</p>
+       <a href="#" class="btn">ابدأ الاختبار</a>
+     </div>
+   </div>
+ </section>
+ 
+ <!-- Footer Placeholder -->
+ <div id="footer-placeholder"></div>
+ 
+ <!-- Main JS لاستدعاء الهيدر والفوتر -->
+-  <link rel="stylesheet" href="css/footer.css">
+-<script src="js/main.js"></script>
++<script src="js/main.js" defer></script>
+ 
+ </body>
+ </html>
