--- a/admin/courses-admin.html
+++ b/admin/courses-admin.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/css/header.css">
   <link rel="stylesheet" href="/css/footer.css">
   <link rel="stylesheet" href="/admin/css-admin/admin.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -24,24 +25,50 @@
       <div id="topbar-placeholder"></div>
 
       <div class="admin-content">
-        <h1>إدارة الدورات</h1>
+        <div class="page-header">
+          <div>
+            <h1>إدارة الدورات</h1>
+            <p class="helper-text">تتبّع الحالات (مسودة، قيد المراجعة، منشورة) والتحكم بجودة المحتوى.</p>
+          </div>
+          <div class="page-actions">
+            <button type="button" id="add-course-btn" class="btn">
+              <i class="fa-solid fa-plus"></i>
+              إضافة دورة جديدة
+            </button>
+          </div>
+        </div>
 
-        <!-- ✅ زر موجود وثابت -->
-        <button type="button" id="add-course-btn">
-          ➕ إضافة دورة جديدة
-        </button>
-
-        <input
-          type="text"
-          id="course-search"
-          placeholder="ابحث عن دورة..."
-        />
+        <div class="table-toolbar">
+          <div class="table-filters">
+            <select id="course-status-filter">
+              <option value="all">كل الحالات</option>
+              <option value="draft">مسودة</option>
+              <option value="review">قيد المراجعة</option>
+              <option value="published">منشورة</option>
+            </select>
+            <select id="course-category-filter">
+              <option value="all">كل التصنيفات</option>
+              <option value="tech">تقنية</option>
+              <option value="design">تصميم</option>
+              <option value="business">أعمال</option>
+            </select>
+          </div>
+          <div class="table-search">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <input
+              type="text"
+              id="course-search"
+              placeholder="ابحث عن دورة..."
+            />
+          </div>
+        </div>
 
         <table class="courses-table">
           <thead>
             <tr>
               <th>عنوان الدورة</th>
               <th>الوصف</th>
+              <th>الحالة</th>
               <th>عدد الطلاب</th>
               <th>الإجراءات</th>
             </tr>
@@ -57,8 +84,7 @@
 
 <div id="footer-placeholder"></div>
 
-<script type="module" src="/js/main.js"></script>
-<script type="module" src="/js/header.js"></script>
+<script type="module" src="/js/main.js" defer></script>
 <script type="module" src="/js/footer.js"></script>
 
 <script type="module" src="/admin/js-admin/admin-guard.js"></script>
@@ -67,4 +93,3 @@
 
 </body>
 </html>
-
