--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -12,6 +12,7 @@
 
   <!-- CSS الأدمن -->
   <link rel="stylesheet" href="css-admin/admin.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -57,8 +58,7 @@
 <div id="footer-placeholder"></div>
 
 <!-- ===== JS الموقع ===== -->
-<script type="module" src="/js/main.js"></script>
-<script type="module" src="/js/header.js"></script>
+<script type="module" src="/js/main.js" defer></script>
 <script type="module" src="/js/footer.js"></script>
 
 <!-- ===== JS الأدمن ===== -->
