--- a/admin/partials-admin/sidebar.html
+++ b/admin/partials-admin/sidebar.html
@@ -6,6 +6,7 @@
 
   <ul class="sidebar-menu">
     <li><a href="dashboard.html" class="active">🏠 لوحة التحكم</a></li>
+    <li><a href="analytics.html">📈 التحليلات</a></li>
     <li><a href="users.html">👤 المستخدمون</a></li>
     <li><a href="courses-admin.html">📚 الدورات</a></li>
     <li><a href="certificates-admin.html">🏆 الشهادات</a></li>
