--- a/admin/partials-admin/topbar.html
+++ b/admin/partials-admin/topbar.html
@@ -6,6 +6,10 @@
   </div>
 
   <div class="topbar-right">
+    <button class="topbar-lang" id="adminLangToggle">
+      <i class="fa fa-globe"></i>
+      <span>AR</span>
+    </button>
     <!-- البحث -->
     <div class="topbar-search">
       <input type="text" id="adminSearchInput" placeholder="ابحث...">
@@ -32,8 +36,28 @@
 </header>
 
 <script>
+  const setAdminDirection = (lang) => {
+    const isRtl = lang === "ar";
+    document.documentElement.setAttribute("dir", isRtl ? "rtl" : "ltr");
+    document.documentElement.setAttribute("lang", isRtl ? "ar" : "en");
+    const label = document.querySelector("#adminLangToggle span");
+    if (label) label.textContent = isRtl ? "AR" : "EN";
+  };
+
   // فتح/إغلاق Dropdown المستخدم
   document.addEventListener("DOMContentLoaded", () => {
+    const storedLang = localStorage.getItem("admin_lang") || "ar";
+    setAdminDirection(storedLang);
+
+    const langToggle = document.getElementById("adminLangToggle");
+    if (langToggle) {
+      langToggle.addEventListener("click", () => {
+        const nextLang = document.documentElement.getAttribute("lang") === "ar" ? "en" : "ar";
+        localStorage.setItem("admin_lang", nextLang);
+        setAdminDirection(nextLang);
+      });
+    }
+
     const userContainer = document.querySelector(".topbar-user");
     const dropdown = userContainer.querySelector(".dropdown-menu");
 
