--- a/tests.html
+++ b/tests.html
@@ -2,13 +2,13 @@
 <html lang="ar" dir="rtl">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>الاختبارات - CourseHub</title>
   <link rel="stylesheet" href="css/header.css">
-
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>الاختبارات - CourseHub</title>
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
@@ -41,8 +41,7 @@
 <div id="footer-placeholder"></div>
 
 <!-- Main JS لاستدعاء الهيدر والفوتر -->
-  <link rel="stylesheet" href="css/footer.css">
-<script src="js/main.js"></script>
+<script src="js/main.js" defer></script>
 
 </body>
 </html>
