--- a/admin/certificates-admin.html
+++ b/admin/certificates-admin.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-  <meta charset="UTF-8">
-  <title>الشهادات | لوحة التحكم</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/header.css">
-  <link rel="stylesheet" href="/css/footer.css">
-  <link rel="stylesheet" href="css-admin/admin.css">
+<!DOCTYPE html>␊
+<html lang="ar" dir="rtl">␊
+<head>␊
+  <meta charset="UTF-8">␊
+  <title>الشهادات | لوحة التحكم</title>␊
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">␊
+␊
+  <link rel="stylesheet" href="/css/style.css">␊
+  <link rel="stylesheet" href="/css/header.css">␊
+  <link rel="stylesheet" href="/css/footer.css">␊
+  <link rel="stylesheet" href="css-admin/admin.css">␊
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -35,7 +35,7 @@
             </tr>
           </thead>
           <tbody id="certificates-list">
-            <!-- سيتم تعبئتها ديناميكيًا بواسطة certificates-admin.js -->
+            <!-- سيتم تعبئتها ديناميكيًا بواسطة certificate-admin.js -->
           </tbody>
         </table>
       </div>
@@ -46,11 +46,13 @@
 <div id="footer-placeholder"></div>
 
 <script type="module" src="/js/main.js" defer></script>
-<script type="module" src="/js/footer.js"></script>
-
-<script type="module" src="js-admin/admin-guard.js"></script>
-<script type="module" src="js-admin/admin-layout.js"></script>
-<script type="module" src="js-admin/certificates-admin.js"></script>
-
-</body>
-</html>
+<script type="module" src="/js/footer.js"></script>␊
+␊
+<script type="module" src="js-admin/admin-guard.js"></script>␊
+<script type="module" src="js-admin/admin-layout.js"></script>␊
+<script type="module" src="js-admin/certificates-admin.js"></script>␊
+␊
+</body>␊
+</html>␊
+␊
+␊
