--- a/admin/courses-admin.html
+++ b/admin/courses-admin.html
@@ -55,7 +55,11 @@
           </div>
           <div class="table-search">
             <i class="fa-solid fa-magnifying-glass"></i>
-            <input type="text" id="course-search" placeholder="ابحث عن دورة..." />
+            <input
+              type="text"
+              id="course-search"
+              placeholder="ابحث عن دورة..."
+            />
           </div>
         </div>
 
