--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     loadLatestCourses();
   </script>
 
-  <script type="module" src="js/main.js" defer></script>
+  <
 </head>
-
+script type="module" src="js/main.js" defer></script>
 <body>
   <div id="header-placeholder"></div>
 
