--- a/tests.html
+++ b/tests.html
@@ -47,6 +47,8 @@
 
   <!-- Footer -->
   <div id="footer-placeholder"></div>
+  <!-- Main JS لاستدعاء الهيدر والفوتر -->
+  <script src="js/main.js" defer></script>
 
 </body>
 </html>
